change author email

--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "authors": [
         {
             "name": "benant",
-            "email": "alk03073135@gmail.com"
+            "email": "benant@paran.com"
         }
     ],
     "require": {
